--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -1,4 +1,4 @@
-name: allure-junit5-maven
+name: allure-cypress-report
 
 on: [ push ]
 
@@ -36,7 +36,7 @@ jobs:
 
     - name: Deploy report to Github Pages
       if: always()
-      uses: peaceiris/actions-gh-pages@v2
+      uses: peaceiris/actions-gh-pages@v3
       env:
         PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         PUBLISH_BRANCH: gh-pages
