--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "endtoend",
   "main": "index.js",
   "scripts": {
-    "pre-test": "allure generate allure-results --clean -o allure-report && allure open allure-report",
+    "pretest": "rm -r allure-results/ allure-report cypress/screenshots || true",
     "cy:open": "cypress open --e2e --env allure=true --browser chrome",
     "test": "cypress_baseUrl=https://the-internet.herokuapp.com  cypress run --env allure=true",
     "report": "allure generate allure-results --clean -o allure-report && allure open allure-report"
